# tbh-helper

./: .gitignore  CHANGELOG.md  README.md  README_TR.md  index.html  package-lock.json  package.json  vite.config.ts
.agents/: AGENTS.md
src/: App.css  App.tsx  index.css  tbh_data.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnalyticsPanel.tsx  EmptyState.tsx  EquippedPanel.tsx  GameTooltip.tsx  Header.tsx  ItemCard.tsx  ItemDetailModal.tsx  ItemsGrid.tsx  MarketExplorer.tsx  MaterialEffectsPanel.tsx  NotificationStack.tsx  SettingsModal.tsx  StatsGrid.tsx  TabNavigation.tsx  UpdateBanner.tsx  WishlistPanel.tsx
src/constants/: gear_details.json  index.ts  item_gold_values.json  material_effects.json
src/hooks/: useSaveData.ts  useUpdateChecker.ts
src/locales/: en.json  tr.json
src/services/: marketDataService.ts
src/services/price/: PriceManager.ts  PriceProvider.ts  SteamMarketProvider.ts  config.ts
src/styles/: analytics.css  empty-state.css  equipped.css  header.css  item-card.css  item-detail-modal.css  market.css  materials.css  notifications.css  settings-modal.css  stats-grid.css  tabs.css  tooltip.css  wishlist.css
src/types/: index.ts
src/utils/: index.ts
