[package]
name = "tbhhelper"
version = "0.1.0"
description = "Task Bar Hero Helper App"
authors = ["Antigravity"]
edition = "2021"

[lib]
name = "tbhhelper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-shell = { version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pbkdf2 = "0.12"
sha1 = "0.10"
hmac = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
flate2 = "1.0"
rfd = "0.14"
ureq = "2.9"
tauri-plugin-notification = "2"
